--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Document</title>  
+    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <link type="text/css" rel="stylesheet" href="./index.css" />
+    <style type="text/tailwindcss">
+      @theme {
+        /* --color-clifford: #da373d; */
+      }
+    </style>
 </head>
 <body>
     <div id="root"></div>
